# Template

./: CMakeLists.txt  README.md  a.out  main.cpp  main.h  sum.h  template.cpp
LC/LC792/: CMakeLists.txt  main.cpp
LC/LC834/: main.cpp
LC834/: CMakeLists.txt
LC891/: CMakeLists.txt  main.cpp
LCP/: CMakeLists.txt  main.cpp
acwing/: 118.cpp
bellman_ford/: bellman_ford.cpp  spfa.cpp
bellman_ford/.cph/: .bellman_ford.cpp_a8222e5d500e247c98d5cac5676f794a.prob  .spfa.cpp_eeda2d379d2584e98c9e8115e4d08834.prob
big_number/: base_conversion.cpp  big_number.cpp
binary_graph/: CMakeLists.txt  main.cpp
binary_graph/base/: main.cpp
binary_graph/maximum_match/: dinic.cpp  hungary.cpp
binary_lifting/tree/: main.cpp  main2.cpp
bit/: CMakeLists.txt  main.cpp
bit/bit_interval_add/: main.cpp
bit/bit_single_add/: main.cpp
bit/bit_single_max/: main.cpp
cantor/: main.cpp  reverse.cpp
comb/base/: main.cpp
comb/complicated/: main.cpp
comb/euler/: main.cpp  phi.cpp
comb/fermat/: main.cpp
deque/: CMakeLists.txt  main.cpp
dijkstra/: CMakeLists.txt  main.cpp
dijkstra/base/: main.cpp
djset/: CMakeLists.txt  main.cpp
djset/base/: main.cpp
djset/rank/: main.cpp
dp/convexhulltrick/: conve_hull_trick.cpp
gcd/base/: main.cpp
heap_sort/: CMakeLists.txt
kmp/base/: main.cpp
kmp/z-kmp/: main.cpp
lca/binary_lifting/: dfs.cpp  father.cpp
lca/tarjan/: main.cpp
lcp/base/: main.cpp
local_bit/max/: main.cpp
local_kmp/base/: main.cpp
local_kmp/z-kmp/: main.cpp
local_manacher/base/: main.cpp
local_test/base/: main.cpp  many_factors.cpp
lower_bound/base/: main.cpp
luogu/: p4648.cpp
manacher/base/: main.cpp
math/linear_algebra/: gaussian_elimination.cpp  xor_linear_basis.cpp
merge_sort/: CMakeLists.txt  main.cpp
merge_sort/base/: main.cpp
network_flow/maximum_flow/: dinic.cpp  ek.cpp
network_flow/minimum_cost_maximum_flow/: ek.cpp
next_higher_k/: CMakeLists.txt  main.cpp
next_higher_k/base/: main.cpp
num_dp/: CMakeLists.txt  main.cpp
ors/ors/: main.cpp
prime_filter/: a.cpp  eratosthenes.cpp  euler.cpp  euler_factor_num.cpp  euler_factor_sum.cpp
queue/: CMakeLists.txt
queue/monotonous/: main.cpp
quick_power/: CMakeLists.txt  main.cpp
quick_power/base/: main.cpp
quick_power/matrix/: main.cpp
quick_sort/: CMakeLists.txt
rand/: CMakeLists.txt  main.cpp
rmq/base/: main.cpp
scan_line/: line.cpp
segment/: CMakeLists.txt  main.cpp
segment/base/: main.cpp
stack/: main.cpp
str_hash/: hash1.cpp  hash2.cpp  hash_twice.cpp
sum/: sosdp.cpp
trie/: CMakeLists.txt  main.cpp  trie01.cpp
(+17 files in other folders)
